# UR5e_social_robotics

./: docker-compose.yml
Level4_server/: 1_ur5e_controller_server.py  2_ur5e_social_client.py  Social_motion_client_server_python.md
Level4_server/Social_motions/: handshake.yaml
src/: 1_UR5e_Real_Robot_connection.md  2_UR5e_Joint_control.md  3_UR5e_Pose_control.md  4_UR5e_ROS_Classroom_Architecture.md
src/ur5e_motion/ur5e_kinematics_control/: package.xml  setup.cfg  setup.py
src/ur5e_motion/ur5e_kinematics_control/config/: trajectory.yaml  trajectory_handshake.yaml  trajectory_wave.yaml
src/ur5e_motion/ur5e_kinematics_control/launch/: ur5e_joint_target.launch.py  ur5e_joint_targets.launch.py
src/ur5e_motion/ur5e_kinematics_control/ur5e_kinematics_control/: ur5e_joint_target.py  ur5e_joint_targets.py
src/ur5e_motion/ur5e_kinematics_pymoveit2/: package.xml  setup.cfg  setup.py
src/ur5e_motion/ur5e_kinematics_pymoveit2/config/: bow.yaml  full.yaml  handshake.yaml  ur5e_hand_shake.yaml  ur5e_pick_place.yaml
src/ur5e_motion/ur5e_kinematics_pymoveit2/launch/: ur5e_forward_kinematics.launch.py  ur5e_hand_shake.launch.py  ur5e_inverse_kinematics.launch.py  ur5e_move_to_pose.launch.py  ur5e_move_to_pose_table.launch.py  ur5e_pick_place.launch.py  ur5e_pose_sequence_simple.launch.py
src/ur5e_motion/ur5e_kinematics_pymoveit2/ur5e_kinematics_pymoveit2/: __init__.py  ur5e_forward_kinematics.py  ur5e_gripper_command.py  ur5e_inverse_kinematics_node.py  ur5e_move_to_pose.py  ur5e_move_to_pose_table.py  ur5e_pose_sequence_simple.py
(+39 files in other folders)
