<?xml version="1.0"?>
<package format="3">
  <name>ur5e_kinematics_pymoveit2</name>
  <version>0.0.1</version>
  <description>UR5e FK/IK demo nodes using MoveIt2 and pymoveit2.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool (robust for rosdep) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>pymoveit2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
